# PicoRender

./: .gitignore  .gitmodules  CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  ImportanceSampling.py  LICENSE  PICORENDER.sln  PICORENDER.vcxproj  PICORENDER.vcxproj.filters  README.md  config.txt  config_post.txt  fileio.cpp  generateStones.py  main.cpp  main.h  post.py  random_generator.cpp  rnd.cpp  rnd.h  types.h  utils.h  wood.tga
CMake/: configure_optix.cmake
PostProcess/: PostProcess.cpp  PostProcess.vcxproj  PostProcess.vcxproj.filters
sources/: Camera.h  ConfigReader.cpp  ConfigReader.h  LoadGeometry.h  MaterialFactory.cpp  MaterialFactory.h  Materials.cu  Mesh.cu  MeshUV.cu  aabb.h  fileio.cpp  main.cpp  main.h  ray.h  ray_payload.h  ray_phisics.h  render.cu  render_uv.cu  rnd.h  sampling.h  sphere.cu  stb_compile_unit.c  types.h
